Fix long content clipping out

--- a/inner_air/static/css/base.css
+++ b/inner_air/static/css/base.css
@@ -130,7 +130,6 @@ body {
   color: #e6e8ff;
   font-size: 14px;
   padding-top: 4rem;
-  height: 100vh;
 }
 body .container {
   margin: auto;
@@ -138,4 +137,5 @@ body .container {
   height: 100vh;
   background-color: #222f45;
   background-image: linear-gradient(0deg, #222f45 85%, #3254a5 99%);
+  height: auto;
 }/*# sourceMappingURL=base.css.map */
